working on first script in earnest

--- a/experimental/out.html
+++ b/experimental/out.html
@@ -8,22 +8,71 @@
 </ol>
 <h1>SCENES</h1>
 <h2>SCENE</h2>
-<p>This is a scene description.</p>
+<p>Concept intro.</p>
 <h3>PANEL</h3>
-<p>This is a panel description.</p>
-<h4>$1</h4>
+<p>TBD</p>
+<h4>Narrator</h4>
 <blockquote>
-<p>Hello, World!</p>
-</blockquote>
-<h4>$2</h4>
 <blockquote>
-<p>Hello, you!</p>
+<p>ON THE EVE OF DESTRUCTION</p>
 </blockquote>
-<h4>PANEL</h4>
-<p>This is a panel description.</p>
+</blockquote>
+<blockquote>
+<blockquote>
+<p>THE LAST ATLANTEANS</p>
+</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>
+<p>WERE ENCODED INTO DATA</p>
+</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>
+<p>AND TRANSMITTED ACROSS SPACE</p>
+</blockquote>
+</blockquote>
 <h2>SCENE</h2>
+<p>Oddyseus and Jason are at the lighthouse.  Athena and Orfeau will arrive and convince them to leave for Troy.</p>
 <h3>PANEL</h3>
+<p>TBD</p>
+<h4>Narrator</h4>
+<blockquote>
+<p>The city of Troy is under siege.</p>
+</blockquote>
 <h3>PANEL</h3>
+<p>TBD</p>
+<h3>PANEL</h3>
+<p>TBD</p>
+<h3>PANEL</h3>
+<h4>Athena</h4>
+<blockquote>
+<p>We need you so that we can get into Troy. We know you've found a way in.</p>
+</blockquote>
+<h3>PANEL</h3>
+<p>TBD</p>
+<h3>PANEL</h3>
+<h4>Oddyseus</h4>
+<blockquote>
+<p>I'm not going. I'm no longer fighting in the war of all against all.</p>
+</blockquote>
+<h3>PANEL</h3>
+<p>TBD</p>
+<h3>PANEL</h3>
+<p>TBD</p>
+<h4>Orfeau</h4>
+<blockquote>
+<p>You want to know the shape of the cage. That's why you're going to come with us.</p>
+</blockquote>
 <h2>SCENE</h2>
+<p>TBD</p>
 <h3>PANEL</h3>
+<p>TBD</p>
 <h3>PANEL</h3>
+<p>TBD</p>
+<h2>SCENE</h2>
+<p>TBD</p>
+<h3>PANEL</h3>
+<p>TBD</p>
+<h3>PANEL</h3>
+<p>TBD</p>
